# aeh

./: CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  create_conan_package.bat
aeh/: CMakeLists.txt  aeh.natvis  conanfile.txt
aeh/src/: CMakeLists.txt  algorithm.hh  algorithm.inl  align.cc  align.hh  batched_parallel_work.hh  batched_parallel_work.inl  binary_io.cc  binary_io.hh  binary_io.inl  bit.hh  change_stack.hh  change_stack.inl  circular.hh  compatibility.hh  concepts.hh  expected.hh  file_vector.cc  file_vector.hh  file_vector.inl  fixed_capacity_vector.hh  fixed_capacity_vector.inl  function_ptr.hh  function_ref.hh  function_ref.inl  generator.hh  generator.inl  half.hh  imgui_dialog.hh  imgui_sdl_binding.cc  imgui_sdl_binding.hh  intcmp.hh  json_string_builder.cc  json_string_builder.hh  math.cc  math.hh  memory_arena.cc  memory_arena.hh  monadic_optional.hh  multicomparison.hh  (+25 more)
aeh/src/debug/: assert.cc  assert.hh  unreachable.cc  unreachable.hh
aeh/src/gl/: gl_core_4_5.cc
aeh/src/imgui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_sdl_binding.hh
aeh/src/input/: input.cc  input.hh  input_SDL.cc  input_SDL.hh  modifiers.cc  modifiers.hh  mouse_ndc.cc  mouse_ndc.hh  repeat_controller.cc  repeat_controller.hh  xm_controller_axes.hh  xm_controller_buttons.hh  xm_keys.hh  xm_mouse_buttons.hh
aeh/src/internal/: portable_file_dialogs.hh
aeh/src/main_loop/: demo_crtp_base.hh  demo_crtp_base.inl  imgui_plugin.cc  imgui_plugin.hh  input_plugin.cc  input_plugin.hh  long_interaction.hh  long_interaction.inl  main_loop.cc  main_loop.hh  main_loop.inl  optional_customization_points.hh
aeh/src/msp/: copy_on_write.hh  copy_on_write.inl  flexible_immutable_array.cc  flexible_immutable_array.hh  flexible_immutable_array.inl  immutable_array.cc  immutable_array.hh  immutable_array.inl  minimalistic_shared_ptr.hh  minimalistic_shared_ptr.inl
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt
tests/src/: algorithm.tests.cc  batched_parallel_work.tests.cc  file_vector.tests.cc  fixed_capacity_vector.tests.cc  function_ref.tests.cc  generator.tests.cc  half.tests.cc  immutable_array.tests.cc  input.tests.cc  json_string_builder.tests.cc  memory_arena.tests.cc  minimalistic_shared_ptr.tests.cc  pointer_union.tests.cc  ring.tests.cc  span.tests.cc  string.tests.cc  tuple.tests.cc  virtual_memory.tests.cc
tests/tests_main/: CMakeLists.txt  main.tests.cc  tests_main.hh
